@@ -1,3 +1,10 @@
+2005-08-09  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* src/ephy-find-toolbar.c (ephy_find_toolbar_open): 
+
+	When opening the find bar with Ctrl+F, search for
+	the item, and select the text.
+
 2005-08-09  Christian Persch  <chpe@cvs.gnome.org>
 
 	* NEWS:
